cabal-version:      2.4
name:               nurse-sveta
version:            0.1.0.0
synopsis:           Dr. Mario prescribes the pills, but Nurse Sveta is the one who administers them
license:            BSD-3-Clause
author:             Daniel Wagner
maintainer:         me@dmwit.com

copyright:          2022 Daniel Wagner
category:           AI
extra-source-files: CHANGELOG.md

flag debug
    description: Build with debugging symbols and no optimizations.
    default:     False
    manual:      True

common shared
    build-depends:        base ^>=4.14.1.0
                        , aeson ^>=2.1
                        , gi-gtk ^>=4.0
                        , maryodel ^>=0.1
                        , mwc-random ^>=0.15
                        , text ^>=1.2
                        , unordered-containers ^>=0.2
    default-language:   Haskell2010
    default-extensions:
                        -- we use AllowAmbiguousTypes, but don't enable it by
                        -- default because in most cases we do not want to
                        -- create ambiguous types
                          FlexibleInstances
                        , GADTs
                        , GeneralizedNewtypeDeriving
                        , LambdaCase
                        , MultiParamTypeClasses
                        , OverloadedLabels
                        , OverloadedStrings
                        , RankNTypes
                        , ScopedTypeVariables
                        , TypeApplications
                        , TypeFamilies
                        , UndecidableInstances
                        , ViewPatterns
    ghc-options:        -Wno-tabs
    if flag(debug)
        ghc-options:    -g
    else
        ghc-options:    -O2

common executable
    import:             shared
    hs-source-dirs:     bin
    build-depends:      nurse-sveta
    ghc-options:        -threaded -rtsopts
    other-modules:      Util

library
    import:             shared
    hs-source-dirs:     src
    exposed-modules:      Nurse.Sveta.STM
                        , Nurse.Sveta.STM.BatchProcessor
                        , Nurse.Sveta.Tomcats
                        , Nurse.Sveta.Torch
                        , Nurse.Sveta.Util
                        , Nurse.Sveta.Widget
    build-depends:        array ^>=0.5
                        , gi-cairo-connector ^>=0.1
                        , gi-cairo-render ^>=0.1
                        , gi-glib ^>=2.0
                        , hashable ^>=1.4
                        , mtl ^>=2.2
                        , stm ^>=2.5.1
                        , tomcats ^>=0.1
                        , vector ^>=0.13
    cxx-sources:        cxxbits/adapter.cpp
    extra-libraries:    stdc++, c10, torch, torch_cpu
    -- when building with profiling, ghc passes -Xpreprocessor -DPROFILING to
    -- the C compiler, which is an issue because libtorch makes an enum with
    -- PROFILING as an entry
    cxx-options:        -Xpreprocessor -UPROFILING
    if flag(debug)
        cxx-options:    -g
    else
        cxx-options:    -O3

executable pathfinding-demo
    import:             executable
    main-is:            pathfinding-demo.hs

executable nurse-sveta
    import:             executable
    main-is:            nurse-sveta.hs
    build-depends:        bytestring ^>=0.10
                        , directory ^>=1.3
                        , filepath ^>=1.4
                        , xdg-basedir ^>=0.2
                        , time ^>=1.9
