cabal-version:      2.4
name:               nurse-sveta
version:            0.1.0.0
synopsis:           Dr. Mario prescribes the pills, but Nurse Sveta is the one who administers them
license:            BSD-3-Clause
author:             Daniel Wagner
maintainer:         me@dmwit.com

copyright:          2022 Daniel Wagner
category:           AI
extra-source-files: CHANGELOG.md
                    cxxbits/*.hpp
data-files:         pybits/wandb-cat.py

flag debug
    description: Build with debugging symbols and no optimizations.
    default:     False
    manual:      True

common shared
    build-depends:        base >=4.14 && <4.17
                        , aeson >=2.1 && <2.3
                        , bytestring >=0.10 && <0.12
                        , containers ^>=0.6
                        , directory ^>=1.3
                        , gi-cairo-render ^>=0.1
                        , gi-gtk ^>=4.0.8
                        , haskell-gi-base ^>=0.26
                        , maryodel ^>=0.1
                        , mtl ^>=2.2
                        , mwc-random ^>=0.15
                        , random ^>=1.2
                        , text ^>=2.1
                        , unordered-containers ^>=0.2
                        , vector ^>=0.13
    default-language:   Haskell2010
    default-extensions:   BlockArguments
                        , DefaultSignatures
                        , DeriveAnyClass
                        , DeriveFunctor
                        , DeriveGeneric
                        , DerivingStrategies
                        , DerivingVia
                        , FlexibleInstances
                        , GADTs
                        , GeneralizedNewtypeDeriving
                        , LambdaCase
                        , MultiParamTypeClasses
                        , MultiWayIf
                        , OverloadedLabels
                        , OverloadedStrings
                        , PartialTypeSignatures
                        , QuantifiedConstraints
                        , RankNTypes
                        , ScopedTypeVariables
                        , StandaloneDeriving
                        , TypeApplications
                        , TypeFamilies
                        , UndecidableInstances
                        , ViewPatterns
    -- the following extensions get turned on only in the modules they get
    -- used, for the reasons listed
    other-extensions:
                        -- ambiguous types are usually an error worth catching
                          AllowAmbiguousTypes
                        -- introduces too much extra stuff at the type/kind level
                        , DataKinds
    ghc-options:        -Wno-tabs -Wno-partial-type-signatures
    if flag(debug)
        ghc-options:    -g
    else
        ghc-options:    -O2

common executable
    import:             shared
    hs-source-dirs:     bin
    build-depends:      nurse-sveta
    ghc-options:        -threaded -rtsopts
    other-modules:      Util

library
    import:             shared
    hs-source-dirs:     src
    exposed-modules:      Nurse.Sveta.Cairo
                        , Nurse.Sveta.Files
                        , Nurse.Sveta.STM
                        , Nurse.Sveta.STM.BatchProcessor
                        , Nurse.Sveta.Tomcats
                        , Nurse.Sveta.Torch
                        , Nurse.Sveta.Torch.CWrapper
                        , Nurse.Sveta.Torch.Endpoint
                        , Nurse.Sveta.Torch.EndpointMap
                        , Nurse.Sveta.Torch.Semantics
                        , Nurse.Sveta.Util
                        , Nurse.Sveta.Widget
    other-modules:        Paths_nurse_sveta
    build-depends:        array ^>=0.5
                        , filepath ^>=1.4
                        , gi-cairo-connector ^>=0.1
                        , gi-glib ^>=2.0
                        , hashable ^>=1.4
                        , haskell-gi-base ^>=0.26
                        , primitive >=0.7 && <0.10
                        , stm ^>=2.5.1
                        , vector-algorithms ^>=0.9
    cxx-sources:          cxxbits/adapter.cpp
                        , cxxbits/constants.cpp
                        , cxxbits/debugging.cpp
                        , cxxbits/endpoint.cpp
    include-dirs:       cxxbits
    includes:           endpoint.h
    extra-libraries:    stdc++, c10, torch, torch_cpu
    -- when building with profiling, ghc passes -Xpreprocessor -DPROFILING to
    -- the C compiler, which is an issue because libtorch makes an enum with
    -- PROFILING as an entry
    cxx-options:        -Xpreprocessor -UPROFILING
    if flag(debug)
        cxx-options:    -g
    else
        cxx-options:    -O3

executable nurse-sveta-pathfinding-demo
    import:             executable
    main-is:            pathfinding-demo.hs

executable nurse-sveta
    import:             executable
    main-is:            nurse-sveta.hs
    other-modules:      CategoryMetadata
    build-depends:        clock ^>=0.8
                        , process ^>=1.6
                        , time >=1.9 && <1.12

executable nurse-sveta-reset-state
    import:             executable
    main-is:            reset-state.hs

executable nurse-sveta-evaluate-stalls
    import:             executable
    main-is:            evaluate-stalls.hs
    build-depends:        multiset ^>=0.3

executable nurse-sveta-endpoint-browser
    import:             executable
    main-is:            endpoint-browser.hs
    build-depends:        data-default ^>=0.7
                        , gi-gio ^>=2.0

executable nurse-sveta-mcts-repl
    import:             executable
    main-is:            mcts-repl.hs

executable nurse-sveta-archive-games
    import:             executable
    main-is:            archive-games.hs
    other-modules:      CategoryMetadata
